# qr-yew

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  qr-yew-69b7681e819cf3b3.js  qr-yew-69b7681e819cf3b3_bg.wasm  qr-yew-7a58075aff2a41d1.js  qr-yew-7a58075aff2a41d1_bg.wasm
.github/workflows/: deploy.yml
src/: main.rs
