[package]
name = "qr-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
qrcodegen = "1.8.0"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.21.7" # Check the latest version on crates.io

[dev-dependencies]
wasm-bindgen-test = "0.3"
